--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 [dependencies]
 bevy = { version = "0.5.0", features = ["dynamic"] }
 rand = "0.8.4"
-noise = "0.7"
+image = "0.23.14"
