--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 bevy = { version = "0.5.0", features = ["dynamic"] }
 rand = "0.8.4"
 image = "0.23.14"
+bevy_rapier3d = { version = "0.11.0", features = [ "render" ] }
