Bevy 0.6 half way there

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "ace_bevy"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-bevy = { version = "0.5.0", features = ["dynamic"] }
+bevy = { version = "0.6.0" }
 rand = "0.8.4"
 image = "0.23.14"
-bevy_rapier3d = { version = "0.11.0", features = [ "render" ] }
+bevy_rapier3d = { version = "0.12.0", features = [ "render" ] }
+
+[workspace]
+resolver = "2" # Important! wgpu/Bevy needs this!
